# MoMoE-impl

./: .gitignore  README.md  pyproject.toml
MoMoE/: momoe.py  sample_moe.py  test.py  torch_moe.py
momoe/: __init__.py  momoe.py  sample_moe.py  test.py  topk_router.py
